// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection form test should display successfull submission screen 1`] = `
<StandardPage
  title="Add a missing community"
>
  <form>
    <NavigationDialogBox
      when={false}
    />
    <WithStyles(Grid)
      container={true}
      spacing={24}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <StandardCard
            help={Object {}}
            title="Community details"
          >
            <WithStyles(Grid)
              container={true}
              spacing={24}
            >
              <WithStyles(Grid)
                item={true}
                xs={12}
              >
                <Field
                  autoFocus={true}
                  component={[Function]}
                  disabled={false}
                  fullWidth={true}
                  label="Title of collection"
                  name="rek_title"
                  placeholder="Type a title for this collection"
                  required={true}
                  type="text"
                  validate={
                    Array [
                      [Function],
                    ]
                  }
                />
              </WithStyles(Grid)>
              <WithStyles(Grid)
                item={true}
                xs={12}
              >
                <Field
                  component={[Function]}
                  disabled={false}
                  fullWidth={true}
                  label="Collection description"
                  multiline={true}
                  name="rek_description"
                  placeholder="Type a description of this collection."
                  required={true}
                  rows={5}
                  validate={
                    Array [
                      [Function],
                    ]
                  }
                />
              </WithStyles(Grid)>
              <WithStyles(Grid)
                item={true}
                xs={12}
              >
                <WithStyles(Typography)>
                  Add up to 10 individual keywords, or a comma separated list, that describe the content of the community.
                </WithStyles(Typography)>
                <Field
                  component={[Function]}
                  disabled={false}
                  locale={
                    Object {
                      "form": Object {
                        "locale": Object {
                          "addButtonLabel": "Add",
                          "id": "keywords-input",
                          "inputFieldHint": "Type keywords",
                          "inputFieldLabel": "Keywords",
                        },
                      },
                      "header": Object {
                        "locale": Object {
                          "deleteAll": "Remove all keywords",
                          "deleteAllConfirmation": Object {
                            "cancelButtonLabel": "No",
                            "confirmButtonLabel": "Yes",
                            "confirmationMessage": "Are you sure you want to delete all keywords?",
                            "confirmationTitle": "Delete all",
                          },
                          "nameColumn": "Keyword",
                          "reorderColumn": "Reorder keywords",
                        },
                      },
                      "row": Object {
                        "locale": Object {
                          "deleteHint": "Remove this keyword",
                          "deleteRecordConfirmation": Object {
                            "cancelButtonLabel": "No",
                            "confirmButtonLabel": "Yes",
                            "confirmationMessage": "Are you sure you want to delete this keyword?",
                            "confirmationTitle": "Delete keyword",
                          },
                          "moveDownHint": "Move keyword down the order",
                          "moveUpHint": "Move keyword up the order",
                        },
                      },
                    }
                  }
                  maxCount={10}
                  maxInputLength={111}
                  name="fez_record_search_key_keywords"
                  searchKey={
                    Object {
                      "order": "rek_keywords_order",
                      "value": "rek_keywords",
                    }
                  }
                />
              </WithStyles(Grid)>
            </WithStyles(Grid)>
          </StandardCard>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Alert)
            message="New work has been saved successfully."
            title="Success"
            type="done"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          sm={true}
          xs={false}
        />
        <WithStyles(Grid)
          item={true}
          sm="auto"
          xs={12}
        >
          <WithStyles(Button)
            disabled={false}
            fullWidth={true}
            onClick={[Function]}
            variant="contained"
          >
            Cancel and return to the homepage
          </WithStyles(Button)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm="auto"
          xs={12}
        >
          <WithStyles(Button)
            color="primary"
            fullWidth={true}
            onClick={[MockFunction]}
            variant="contained"
          >
            Add community
          </WithStyles(Button)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`Collection form test should render form 1`] = `
<StandardPage
  title="Add a missing community"
>
  <form>
    <NavigationDialogBox
      when={true}
    />
    <WithStyles(Grid)
      container={true}
      spacing={24}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <StandardCard
            help={Object {}}
            title="Community details"
          >
            <WithStyles(Grid)
              container={true}
              spacing={24}
            >
              <WithStyles(Grid)
                item={true}
                xs={12}
              >
                <Field
                  autoFocus={true}
                  component={[Function]}
                  disabled={false}
                  fullWidth={true}
                  label="Title of collection"
                  name="rek_title"
                  placeholder="Type a title for this collection"
                  required={true}
                  type="text"
                  validate={
                    Array [
                      [Function],
                    ]
                  }
                />
              </WithStyles(Grid)>
              <WithStyles(Grid)
                item={true}
                xs={12}
              >
                <Field
                  component={[Function]}
                  disabled={false}
                  fullWidth={true}
                  label="Collection description"
                  multiline={true}
                  name="rek_description"
                  placeholder="Type a description of this collection."
                  required={true}
                  rows={5}
                  validate={
                    Array [
                      [Function],
                    ]
                  }
                />
              </WithStyles(Grid)>
              <WithStyles(Grid)
                item={true}
                xs={12}
              >
                <WithStyles(Typography)>
                  Add up to 10 individual keywords, or a comma separated list, that describe the content of the community.
                </WithStyles(Typography)>
                <Field
                  component={[Function]}
                  disabled={false}
                  locale={
                    Object {
                      "form": Object {
                        "locale": Object {
                          "addButtonLabel": "Add",
                          "id": "keywords-input",
                          "inputFieldHint": "Type keywords",
                          "inputFieldLabel": "Keywords",
                        },
                      },
                      "header": Object {
                        "locale": Object {
                          "deleteAll": "Remove all keywords",
                          "deleteAllConfirmation": Object {
                            "cancelButtonLabel": "No",
                            "confirmButtonLabel": "Yes",
                            "confirmationMessage": "Are you sure you want to delete all keywords?",
                            "confirmationTitle": "Delete all",
                          },
                          "nameColumn": "Keyword",
                          "reorderColumn": "Reorder keywords",
                        },
                      },
                      "row": Object {
                        "locale": Object {
                          "deleteHint": "Remove this keyword",
                          "deleteRecordConfirmation": Object {
                            "cancelButtonLabel": "No",
                            "confirmButtonLabel": "Yes",
                            "confirmationMessage": "Are you sure you want to delete this keyword?",
                            "confirmationTitle": "Delete keyword",
                          },
                          "moveDownHint": "Move keyword down the order",
                          "moveUpHint": "Move keyword up the order",
                        },
                      },
                    }
                  }
                  maxCount={10}
                  maxInputLength={111}
                  name="fez_record_search_key_keywords"
                  searchKey={
                    Object {
                      "order": "rek_keywords_order",
                      "value": "rek_keywords",
                    }
                  }
                />
              </WithStyles(Grid)>
            </WithStyles(Grid)>
          </StandardCard>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          sm={true}
          xs={false}
        />
        <WithStyles(Grid)
          item={true}
          sm="auto"
          xs={12}
        >
          <WithStyles(Button)
            disabled={false}
            fullWidth={true}
            onClick={[Function]}
            variant="contained"
          >
            Cancel and return to the homepage
          </WithStyles(Button)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm="auto"
          xs={12}
        >
          <WithStyles(Button)
            color="primary"
            fullWidth={true}
            onClick={[MockFunction]}
            variant="contained"
          >
            Add community
          </WithStyles(Button)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`Collection form test should render success panel 1`] = `
<StandardPage
  title="Add a missing community"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        title="Community added successfully"
      >
        <WithStyles(Typography)>
          Your new community was created successfully.
        </WithStyles(Typography)>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Return to the homepage
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Button)
        color="primary"
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Add another community
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;
